force-app/main/default/objects/PricebookEntry/fields/Dan360_ByPassApex__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ByPassApex__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dan360_ByPassApex</label>
    <type>Checkbox</type>
</CustomField>