force-app/main/default/objects/PricebookEntry/fields/Dan360_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Descuento__c</fullName>
    <description>Campo que indica el descuento que aplica para un producto para un cliente.</description>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>