force-app/main/default/objects/PricebookEntry/fields/Dan360_Editable__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite Editar el registro desde apex</description>
    <label>Dan360_Editable</label>
    <type>Checkbox</type>
</CustomField>