force-app/main/default/objects/PricebookEntry/fields/Dan360_IDExterno__c.field-meta.xml
<CustomField>
    <fullName>Dan360_IDExterno__c</fullName>
    <description>ID que representa el customer area y Id Material.</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>