force-app/main/default/objects/PricebookEntry/fields/Dan360_UnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadMedida__c</fullName>
    <label>Unidad de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unidad</fullName>
            </value>
            <value>
                <fullName>Bulto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>