force-app/main/default/objects/PricebookEntry/fields/Descuento_aplicado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_aplicado__c</fullName>
    <label>Descuento aplicado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>