force-app/main/default/objects/PricebookEntry/fields/Disc_Line_id__c.field-meta.xml
<CustomField>
    <fullName>Disc_Line_id__c</fullName>
    <label>Disc Line id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>