force-app/main/default/objects/PricebookEntry/fields/Id_entrada__c.field-meta.xml
<CustomField>
    <fullName>Id_entrada__c</fullName>
    <externalId>true</externalId>
    <label>Id entrada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>