force-app/main/default/objects/PricebookEntry/fields/ID_SAP__c.field-meta.xml
<CustomField>
    <fullName>ID_SAP__c</fullName>
    <externalId>true</externalId>
    <label>ID SAP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>