force-app/main/default/objects/PricebookEntry/fields/UnitPriceWithDiscount__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceWithDiscount__c</fullName>
    <formula>UnitPrice - (UnitPrice*Dan360_Descuento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price with Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>