force-app/main/default/objects/PricebookEntry/fields/UnitPriceWithDiscountS__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceWithDiscountS__c</fullName>
    <formula>TEXT(UnitPrice - (UnitPrice*Dan360_Descuento__c))</formula>
    <label>UnitPriceWithDiscountS</label>
    <type>Text</type>
</CustomField>